fixed color line at the bottom of the testimonial images with vertical align

--- a/src/app/components/testimonials/testimonials.component.css
+++ b/src/app/components/testimonials/testimonials.component.css
@@ -8,6 +8,7 @@
 .testimonials-img {
     width: 100%;
     filter: opacity(.75);
+    vertical-align: bottom;
 }
 
 .testimonial-div {
